# cw6

./: .env.sample  README  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: create_content_manager_group.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  apscheduler.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_newsletter.py  start_scheduler.py
mailing/migrations/: 0001_initial.py  0002_mailing_title.py  0003_attempt.py  0004_client_owner_mailing_owner_message_owner.py
mailing/templates/: base_generic.html  home.html
mailing/templates/mailing/: client_admin_list.html  client_form.html  client_list.html  mailing_admin_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_toggle_status.html  message_admin_list.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_manager_group.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  password_change.html  password_change_done.html  password_change_form.html  profile.html  register.html  user_block_confirm.html  user_list.html
